tests/NormalTests/paczka1/small_fuzzy/19835285.err
Error in line 2: HiokmxW1 A452 42,1
Error in line 10: zxYa S328 35,6
Error in line 16: K04Dwsku A452 -5,5
